// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Jira Update tests Basic snapshot - deploymentform mode: jira-update-deploymentform 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group connectorDeployment"
    >
      <label
        class="bp3-label"
      >
        pipeline.jiraApprovalStep.connectorRef
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
          data-testid="cr-field-spec.conectorRef"
          style="width: 400px;"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <p
                    class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                    tabindex="0"
                  >
                    c1
                  </p>
                </span>
              </span>
              <div
                class="rightStatus"
              >
                <span
                  class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                  data-testid="crf-status"
                  icon="full-circle"
                >
                  <svg
                    data-icon="full-circle"
                    height="6"
                    viewBox="0 0 16 16"
                    width="6"
                  >
                    <desc>
                      full-circle
                    </desc>
                    <path
                      d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="Tag--main"
                >
                  <span
                    class="bp3-tag bp3-minimal tag"
                  >
                    <span
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      project
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </span>
          <span
            class="bp3-icon bp3-icon-caret-down StyledProps--main"
            icon="caret-down"
          >
            <svg
              data-icon="caret-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                caret-down
              </desc>
              <path
                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.issueKey"
      >
        pipeline.jiraApprovalStep.issueKey
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="spec.issueKey"
            placeholder="pipeline.jiraApprovalStep.issueKey"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.transitionTo.status"
      >
        status
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-popover-wrapper Select--main bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="spec.transitionTo.status"
                placeholder="status"
                style="padding-right: 0px;"
                type="text"
                value=""
              />
              <span
                class="bp3-input-action"
              >
                <span
                  class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                  icon="caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      caret-down
                    </desc>
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="spec.transitionTo.transitionName"
            placeholder="pipeline.jiraUpdateStep.transitionLabel"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Jira Update tests Basic snapshot - input variable view: jira-update-input variable view 1`] = `
<div>
  <div
    class="variablesListTable"
  >
    <div
      class="main"
    >
      <div
        class="text"
      >
        step.approval.timeout
      </div>
      <div
        class="bp3-popover-wrapper btnWrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow"
            tabindex="0"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="copy-alt"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 8 9"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
    <p
      class="StyledProps--font Text--lineclamp StyledProps--main"
      style="--text-line-clamp: 1;"
    >
      1d
    </p>
    <div
      class="main"
    >
      <div
        class="text"
      >
        step.approval.spec.connectorRef
      </div>
      <div
        class="bp3-popover-wrapper btnWrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow"
            tabindex="0"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="copy-alt"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 8 9"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
    <p
      class="StyledProps--font Text--lineclamp StyledProps--main"
      style="--text-line-clamp: 1;"
    >
      
    </p>
    <div
      class="main"
    >
      <div
        class="text"
      >
        step.approval.spec.issueKey
      </div>
      <div
        class="bp3-popover-wrapper btnWrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow"
            tabindex="0"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="copy-alt"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 8 9"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
    <p
      class="StyledProps--font Text--lineclamp StyledProps--main"
      style="--text-line-clamp: 1;"
    >
      
    </p>
  </div>
</div>
`;

exports[`Jira Update tests Basic snapshot - inputset mode but no runtime values: jira-update-inputset-noruntime 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Jira Update tests Basic snapshot - inputset mode: input set with errors 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group connectorDeployment"
    >
      <label
        class="bp3-label"
      >
        pipeline.jiraApprovalStep.connectorRef
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
          data-testid="cr-field-spec.conectorRef"
          style="width: 400px;"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <p
                    class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                    tabindex="0"
                  >
                    c1
                  </p>
                </span>
              </span>
              <div
                class="rightStatus"
              >
                <span
                  class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                  data-testid="crf-status"
                  icon="full-circle"
                >
                  <svg
                    data-icon="full-circle"
                    height="6"
                    viewBox="0 0 16 16"
                    width="6"
                  >
                    <desc>
                      full-circle
                    </desc>
                    <path
                      d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="Tag--main"
                >
                  <span
                    class="bp3-tag bp3-minimal tag"
                  >
                    <span
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      project
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </span>
          <span
            class="bp3-icon bp3-icon-caret-down StyledProps--main"
            icon="caret-down"
          >
            <svg
              data-icon="caret-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                caret-down
              </desc>
              <path
                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="bp3-form-group bp3-intent-danger deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.issueKey"
      >
        pipeline.jiraApprovalStep.issueKey
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group bp3-intent-danger"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="spec.issueKey"
            placeholder="pipeline.jiraApprovalStep.issueKey"
            type="text"
            value=""
          />
        </div>
        <div
          class="bp3-form-helper-text"
        >
          pipeline.jiraApprovalStep.validations.issueKey
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.transitionTo.status"
      >
        status
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-popover-wrapper Select--main bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="spec.transitionTo.status"
                placeholder="status"
                style="padding-right: 0px;"
                type="text"
                value=""
              />
              <span
                class="bp3-input-action"
              >
                <span
                  class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                  icon="caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      caret-down
                    </desc>
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="spec.transitionTo.transitionName"
            placeholder="pipeline.jiraUpdateStep.transitionLabel"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {
  "spec": {
    "connectorRef": "pipeline.jiraApprovalStep.validations.connectorRef",
    "issueKey": "pipeline.jiraApprovalStep.validations.issueKey"
  }
}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Jira Update tests Edit stage - readony view: editstage-readonly 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup md"
    >
      <div
        class="InputWithIdentifier--txtNameContainer TextInput--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            ID
            :
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                tabindex="0"
              >
                <span
                  class="bp3-editable-text-content"
                  style="height: 1px; line-height: 1px; min-width: 0;"
                />
              </div>
            </span>
          </span>
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main"
            icon="edit"
            style="vertical-align: middle;"
          >
            <svg
              data-icon="edit"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="bp3-form-group bp3-disabled"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="jiraUpdate_name"
            >
              name
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="name"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
    >
      <div
        class="bp3-form-group bp3-disabled sm"
      >
        <label
          class="bp3-label"
          for="timeout"
        >
          pipelineSteps.timeoutLabel
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
            style="flex-grow: 1;"
          >
            <div
              class="bp3-input-group bp3-disabled bp3-fill"
            >
              <input
                class="bp3-input"
                disabled=""
                name="timeout"
                placeholder="Enter w/d/h/m/s/ms"
                type="text"
                value="5s"
              />
            </div>
            <button
              class="MultiTypeInput--btn MultiTypeInput--FIXED"
              disabled=""
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="fixed-input"
              >
                <svg
                  height="12"
                  viewBox="0 0 9 9"
                  width="12"
                >
                  <path
                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Accordion--accordion accordion"
    >
      <div
        class="Accordion--panel"
        data-open="true"
        data-testid="step-1-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-1-summary"
        >
          <div
            class="Accordion--chevron"
          />
          <div
            class="Accordion--label"
          >
            pipeline.jiraApprovalStep.connectToJira
          </div>
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
          style="height: auto; overflow-y: visible; transition: none;"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(0); transition: none;"
          >
            <div
              class="Accordion--details"
              data-testid="step-1-details"
            >
              <div>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                >
                  <div>
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="margin-bottom: 5px;"
                    >
                      pipeline.jiraApprovalStep.connectorRef
                    </div>
                    <div
                      class="bp3-form-group connector"
                      style="margin-bottom: 0px;"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                          style="width: 400px;"
                        >
                          <button
                            class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
                            data-testid="cr-field-spec.connectorRef"
                            disabled=""
                            style="width: 372px;"
                            tabindex="-1"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <div
                                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                              >
                                <span
                                  class="bp3-popover-wrapper"
                                >
                                  <span
                                    class="bp3-popover-target"
                                  >
                                    <p
                                      class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                      tabindex="0"
                                    >
                                      c1
                                    </p>
                                  </span>
                                </span>
                                <div
                                  class="rightStatus"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                                    data-testid="crf-status"
                                    icon="full-circle"
                                  >
                                    <svg
                                      data-icon="full-circle"
                                      height="6"
                                      viewBox="0 0 16 16"
                                      width="6"
                                    >
                                      <desc>
                                        full-circle
                                      </desc>
                                      <path
                                        d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    class="Tag--main"
                                  >
                                    <span
                                      class="bp3-tag bp3-minimal tag"
                                    >
                                      <span
                                        class="bp3-text-overflow-ellipsis bp3-fill"
                                      >
                                        project
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </span>
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </button>
                          <button
                            class="MultiTypeInput--btn MultiTypeInput--FIXED"
                            disabled=""
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                >
                  <div
                    class="bp3-form-group bp3-disabled md"
                  >
                    <label
                      class="bp3-label"
                      for="spec.issueKey"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="jiraUpdate_spec.issueKey"
                      >
                        pipeline.jiraApprovalStep.issueKey
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                      >
                        <div
                          class="bp3-input-group bp3-disabled MultiTypeInput--input"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="spec.issueKey"
                            placeholder="pipeline.jiraApprovalStep.issueKey"
                            type="text"
                            value=""
                          />
                        </div>
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          disabled=""
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-2-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-2-summary"
        >
          <div
            class="Accordion--chevron"
          />
          <div
            class="Accordion--label"
          >
            pipeline.jiraUpdateStep.statusTransitionAccordion
          </div>
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-3-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-3-summary"
        >
          <div
            class="Accordion--chevron"
          />
          <div
            class="Accordion--label"
          >
            pipeline.jiraCreateStep.fields
          </div>
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Jira Update tests deploymentform readonly mode: jira-update-deploymentform-readonly 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group connectorDeployment"
    >
      <label
        class="bp3-label"
      >
        pipeline.jiraApprovalStep.connectorRef
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
          data-testid="cr-field-spec.conectorRef"
          style="width: 400px;"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <p
                    class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                    tabindex="0"
                  >
                    c1
                  </p>
                </span>
              </span>
              <div
                class="rightStatus"
              >
                <span
                  class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                  data-testid="crf-status"
                  icon="full-circle"
                >
                  <svg
                    data-icon="full-circle"
                    height="6"
                    viewBox="0 0 16 16"
                    width="6"
                  >
                    <desc>
                      full-circle
                    </desc>
                    <path
                      d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="Tag--main"
                >
                  <span
                    class="bp3-tag bp3-minimal tag"
                  >
                    <span
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      project
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </span>
          <span
            class="bp3-icon bp3-icon-caret-down StyledProps--main"
            icon="caret-down"
          >
            <svg
              data-icon="caret-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                caret-down
              </desc>
              <path
                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.issueKey"
      >
        pipeline.jiraApprovalStep.issueKey
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="spec.issueKey"
            placeholder="pipeline.jiraApprovalStep.issueKey"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.transitionTo.status"
      >
        status
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-popover-wrapper Select--main bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="spec.transitionTo.status"
                placeholder="status"
                style="padding-right: 0px;"
                type="text"
                value=""
              />
              <span
                class="bp3-input-action"
              >
                <span
                  class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                  icon="caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      caret-down
                    </desc>
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="spec.transitionTo.transitionName"
            placeholder="pipeline.jiraUpdateStep.transitionLabel"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;
